--- a/assets/appstore.json
+++ b/assets/appstore.json
@@ -1,7 +1,7 @@
 {
     "status": 200,
     "autoloader": {
-      "rename-me": "./rename-me.js",
+      "mark-the-words": "./mark-the-words.js",
       "meme-maker": "@lrnwebcomponents/meme-maker/meme-maker.js",
       "multiple-choice": "@lrnwebcomponents/multiple-choice/multiple-choice.js",
       "retro-card": "@lrnwebcomponents/retro-card/retro-card.js",
